<resources>
    <string name="app_name">MediaPlayer</string>

    <string name="title_music">音乐</string>
    <string name="title_video">视频</string>

    <string name="label_pause">暂停</string>
    <string name="label_play">播放</string>
    <string name="label_previous">上一曲</string>
    <string name="label_next">下一曲</string>

    <string name="actionSet">均衡器</string>
    <string name="addLocal">导入本地</string>
    <string name="sort">排序</string>
    <string name="finish">退出</string>
    <string name="doc_sure">确定</string>

    <string name="notification_channel">Music_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for Music</string>
    <string name="login">登录</string>
    <string name="signup">注册账号</string>
    <string name="forget">忘记密码</string>
    <string name="sign_up">注册</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="phone">电话</string>
    <string name="placeholder">请输入...</string>
    <string name="login_btn">登录</string>
    <string name="login_agreement_tip">已阅读并同意《融媒体软件服务许可协议》</string>
</resources>