<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    app:layoutDescription="@xml/activity_login2_scene"
    tools:context=".activity.Login2Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="335dp"
        android:layout_height="403dp"
        android:background="@drawable/login_option_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17.5dp"
            android:layout_marginBottom="14.5dp"
            android:text="账号登录"
            android:textColor="#ff333333"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_username"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="7.5dp"
            android:background="@drawable/login_input_bg"
            android:drawableStart="@mipmap/login_username_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/placeholder"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text=""
            android:textColor="#ff333333"
            android:textColorHint="#ff999999"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7.5dp"
            android:background="@drawable/login_input_bg"
            android:drawableStart="@mipmap/login_password_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="请输入..."
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#ff333333"
            android:textColorHint="#ff999999"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/primary_btn"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textColor="@drawable/primary_btn"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17.5dp"
            android:layout_marginTop="14.5dp"
            android:text="@string/signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17.5dp"
            android:text="@string/forget"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/login_agreement_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10.5dp"
            android:text="@string/login_agreement_tip"
            android:textSize="11sp"
            app:drawableStartCompat="@mipmap/uncheck_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>