<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@+id/cl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="335dp"
        android:layout_height="403dp"
        android:background="@drawable/login_option_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17.5dp"
            android:layout_marginBottom="14.5dp"
            android:text="账号登录"
            android:textColor="#ff333333"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_username"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="7.5dp"
            android:background="@drawable/login_input_bg"
            android:drawableStart="@mipmap/login_username_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/placeholder"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text=""
            android:textColor="#ff333333"
            android:textColorHint="#ff999999"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7.5dp"
            android:background="@drawable/login_input_bg"
            android:drawableStart="@mipmap/login_password_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="请输入..."
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#ff333333"
            android:textColorHint="#ff999999"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/primary_btn"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textColor="@drawable/primary_btn"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_logon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17.5dp"
            android:layout_marginTop="14.5dp"
            android:text="@string/signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17.5dp"
            android:text="@string/forget"
            app:layout_constraintBottom_toBottomOf="@+id/tv_logon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_logon" />

        <TextView
            android:id="@+id/login_agreement_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10.5dp"
            android:text="@string/login_agreement_tip"
            android:textSize="11sp"
            app:drawableStartCompat="@mipmap/uncheck_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logon" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/ml"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    app:layoutDescription="@xml/activity_login_scene"-->
<!--    tools:context=".activity.LoginActivity">-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent="0.4" />-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline9"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent="0.5" />-->


<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline10"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent="0.69" />-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline11"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent="0.15" />-->

<!--    <EditText-->
<!--        android:id="@+id/et_username"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/edit_text_bg"-->
<!--        android:ems="10"-->
<!--        android:gravity="center"-->
<!--        android:hint="@string/username"-->
<!--        android:inputType="textPersonName"-->
<!--        android:minHeight="48dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline5"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline5" />-->

<!--    <EditText-->
<!--        android:id="@+id/et_password"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/edit_text_bg"-->
<!--        android:ems="10"-->
<!--        android:gravity="center"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline9"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline9" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_login"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/login"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline10"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline10" />-->

<!--    <ImageView-->
<!--        android:id="@+id/iv_log"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/iv_local_video"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/guideline11"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/guideline11" />-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline12"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent="0.8" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_logon"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/signup"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline12"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/btn_login"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline12" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView8"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/forget"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline12"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/btn_login"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline12" />-->


<!--</androidx.constraintlayout.motion.widget.MotionLayout>-->

<!--    &lt;!&ndash;-->
<!--    在设置动画前先将控件id设置好-->
<!--    &ndash;&gt;-->